--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
     <style>
         h1 {
-            color: red
+            color: red;
+            font-size: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h3>Hello world</h3>
 </body>
 </html>
